# fpfs

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: architecure_concepts.md
src/: external_serialization.rs  fpfs.rs  lib.rs  main.rs  serialization.rs  tg.rs  tg_tools.rs  types.rs
tests/: integration_tests.rs
