[package]
name = "fpfs"
version = "0.1.0"
authors = ["Alex Plate <AlexPl292@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3.1"
time = "0.1.44"
libc = "0.2.51"

[dev-dependencies]
env_logger = "0.6.0"
