[package]
name = "fpfs"
version = "0.1.0"
authors = ["Alex Plate <AlexPl292@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3.1"
time = "0.1.44"
libc = "0.2.51"
tokio = { version = "0.3.5", features = ["fs", "sync", "rt-multi-thread"]}
rand = "0.7.3"
grammers-client = { git = "https://github.com/Lonami/grammers" }
grammers-session = { git = "https://github.com/Lonami/grammers" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers" }
grammers-mtsender = { git = "https://github.com/Lonami/grammers" }
grammers-mtproto = { git = "https://github.com/Lonami/grammers" }
simple_logger = "1.11.0"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"

[dev-dependencies]
tokio = { version = "0.3", features = ["macros", "time", "fs", "rt"] }
